--- a/overview.Rmd
+++ b/overview.Rmd
@@ -80,7 +80,7 @@ Some facts of the case:
 
 ## Literature Review of previous analysis
 
-The main aim of the assignment is to identify anomalies between the data provided and use those data sources to draw relationships and identify suspicious behaviors for further investigation. In order to do so, we would need to perform exploratory data analysis (EDA) to analyze data and gain insights. Effective visual data mining needs to display data in ways that human minds can easily perceive patterns and relationships in the data.
+Effective visual data mining needs to display data in ways that human minds can easily perceive patterns and relationships in the data.
 
 Most visualizations showing geographically-referenced movement data use conventional Geographic Information Systems (GIS). Movement data are represented as lines on the map. The most basic form is a line between two points
 which gives information about the movement of an object. Trajectory data can help in understanding of flow during an unusual event. Real world data sets typically do not provide singular trajectories. Instead, multiple trajectories tend to be mapped, as seen in Figure 1. However, when large data sets are involved, these trajectory lines tend to overlap, resulting in visual clutter and occlusions and makes the trajectory of individual lines illegible.
@@ -95,21 +95,21 @@ Another limitation of trajectory maps are that they are unable to reflect the da
 
 ![Figure 3: Using annotations to reflect information<br> Source: https://www.cs.umd.edu/hcil/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/University%20of%20Konstanz/](Image/Ex5.png)
 
-Static visualizations usually focus on a specific data story and users cannot go beyond a single view to explore additional stories beyond what is in front of them. In the stacked bar chart below, users can see which location is visited the most often and which time period they are popular. However, one limitation of the stacked bar chart is that it is difficult to compare relative size of the components that make up each bar. Also, as categories or data series are added, stacked column charts quickly become visually complex. In the figure below, it is hard for the user to compare the popularity of Abila Scrapyard and Kronos Pipe and Irrigation in the afternoon.
+Static visualizations usually focus on a specific data story and users cannot go beyond a single view to explore additional stories beyond what is in front of them. In the stacked bar chart below, users can see which location is visited the most often and which time period they are popular. However, one limitation of the stacked bar chart is that it is difficult to compare relative size of the components that make up each bar. Also, as categories or data series are added, stacked column charts quickly become visually complex. In the figure below, it is hard for the user to compare the popularity of Abila Scrapyard and Kronos Pipe and Irrigation in the afternoon. It would hence be better to present them in the form of multiple bar charts (not stacked).
 
 When exploring unexpected structure in graphics, it is useful to have selections made on one chart update the other. Cross-linking two charts allows for one to select groups of observations and interaction with one chart will change the other, giving the user multiple views of the selected observations.
 
 ![Figure 4: Static and stacked barcharts <br> Source: https://www.cs.umd.edu/hcil/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/University%20of%20Buenos%20Aires%20-%20Arcaya/](Image/Ex3.png){width=120%}
 
-An alternative view of popular times and locations is the use of parallel coordinates as shown in Figure 5 below. The user is able to decipher which locations are most popular during each day of the week, and which department it is popular with. However, due to the static nature of the chart, users are unable to obtain further information such as transaction amount. Also, the chart uses colors which are highly similar to show the different days and different departments. This makes it harder to read the chart. 
+An alternative view of popular times and locations is the use of parallel coordinates as shown in Figure 5 below. The user is able to decipher which locations are most popular during each day of the week, and which department it is popular with. However, due to the static nature of the chart, users are unable to obtain further information such as transaction amount. Also, the chart uses colors which are highly similar to show the different days and different departments. This makes it harder to differentiate the colors and what they represent in the chart. 
 
 ![Figure 5: Parallel Coordinates <br> Source: https://www.cs.umd.edu/hcil/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/University%20of%20Buenos%20Aires%20-%20Alcoser/](Image/Ex1.png)
 
-Another presentation is via the use of a heatmap. In Figure 6 below, we see that this results in a cluttered chart where the axis labels are not clear and visible. A heatmap also gives the user a broad view of the trends but without interactive features like tooltips, users are unable to obtain further details. Also, as the trends are represented by a color scale, it may be difficult to compare cells which have values close to each other and hence the colors do not differ visibly to the human eye.
+Another presentation is via the use of a heatmap. In Figure 6 below, we see that this results in a cluttered chart where the axis labels are not clear and visible. A heatmap also gives the user a broad view of the trends but without interactive features like tooltips, users are unable to obtain further details such as exact price. Also, as the values are represented by a color scale, it may be difficult to compare cells which have values close to each other as the colors do not differ visibly to the human eye.
 
 ![Figure 6: Static heatmaps <br> Source: https://www.cs.umd.edu/hcil/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/Central%20South%20University/](Image/Ex6.png){width=120%}
 
-The below boxplot shows the price range of all transactions recorded. Due to the static nature of the plot, we are unable to see other details such as transaction date and location. By applying brushing and cross-linking of two charts- the boxplot and another datatable, this allows for one to select groups of observations and interaction with one chart will change the other. Hence the user will be able to obtain more details on the selected observations.
+The below boxplot shows the price range of all transactions recorded. Due to the static nature of the plot, we are unable to see other details such as transaction date and location. By applying brushing and cross-linking of two charts- the boxplot and another datatable, this allows for one to select groups of observations and interaction with one chart will change the other. Hence the user will be able to obtain more details on the selected observations. Alternatively, one can also include tooltips into the chart, which reflects the desired details such as price, date etc.
 
 ![Figure 7: Static boxplots <br> Source: https://www.cs.umd.edu/hcil/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/University%20of%20Buenos%20Aires%20-%20Alcoser/](Image/Ex7.png){width=90%}
 
